--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:configChanges="locale"
             android:name="com.deitel.tipcalculator.MainActivity"
             android:label="@string/app_name" android:screenOrientation="portrait" android:windowSoftInputMode="stateAlwaysVisible">
             <intent-filter>
