--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 16
     buildToolsVersion "21.1.2"
-
     defaultConfig {
         applicationId "com.deitel.tipcalculator"
-        minSdkVersion 18
-        targetSdkVersion 19
+        minSdkVersion 15
+        targetSdkVersion 16
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+    }
+    productFlavors {
     }
 }
 
