--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
+        <activity android:configChanges="locale"
             android:name="com.deitel.tipcalculator.MainActivity"
             android:label="@string/app_name" android:screenOrientation="portrait" android:windowSoftInputMode="stateAlwaysVisible">
             <intent-filter>
@@ -21,6 +21,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
         </activity>
     </application>
 
