--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.deitel.tipcalculator"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	<uses-permission 
+	    android:name="android.permission.CHANGE_CONFIGURATION" />
     <uses-sdk
         android:minSdkVersion="18"
         android:targetSdkVersion="19" />
@@ -13,7 +14,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
+        <activity 
+            android:configChanges="locale"
             android:name="com.deitel.tipcalculator.MainActivity"
             android:label="@string/app_name" android:screenOrientation="portrait" android:windowSoftInputMode="stateAlwaysVisible">
             <intent-filter>
@@ -21,6 +23,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            
         </activity>
     </application>
 
